--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -5,6 +5,8 @@
     <link rel="icon" href="https://res.cloudinary.com/pathapadha-in/image/upload/v1603477015/Resources/circle-cropped_f7sgrb.png" type="image/icon type">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="The First Ever ODIA E-Learning Platform where you can learn to code for free with full explanation in your native language ODIA. Come and Join Us." />
     {% block header %}
     <title>Learn Coding In Odia | Home</title>
     {% endblock %}
@@ -23,10 +25,10 @@
             font-weight: 500;
             margin: 0.15%;
         }
-        .tt, .fb, .linkedin, .insta, .website{
-          color:white;
-        }
         .tt:hover{
+          color: rgb(0, 162, 255);
+        }
+        .yt:hover{
           color: red;
         }
         .blockquote-custom {
@@ -211,7 +213,7 @@
         </li>
         <li class="list-inline-item">
             <a class="btn-floating btn-tw mx-1" href="https://www.youtube.com/channel/UCh6Soj_LewjsTvgQc4NiU5w">
-            <i class="fab fa-youtube tt fa-lg"> </i>
+            <i class="fab fa-youtube yt fa-lg"> </i>
             </a>
         </li>
         <li class="list-inline-item">
