--- a/main/templates/main/exam.html
+++ b/main/templates/main/exam.html
@@ -47,8 +47,6 @@
                   <iframe src="https://trinket.io/embed/python3/f066802f75" width="100%" height="500" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
                 </div>
                 <div class="text-center">
-                    <h2>Weekly Quiz as per Tutorials</h2><br>
-                    <p class="article-content disabled">Coming Soon...Stay Tuned</p><br>
                     <h2>Common Quiz Topic Wise</h2>
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item article-content"><div class='goconqr-popup-embed' data-id='26367928' data-type='quizzes'></div><script type='text/javascript' src='https://cdn.goconqr.com/embed.min.js'></script></li>
@@ -75,8 +73,6 @@
                 <i><b class="text-danger" style="text-align: center;">** DONOT CHANGE THE LANGUAGE OF THE BELOW COMPILER. FOR PYTHON, JAVA etc. GO TO THE CORRESPONDING SECTION **</b></i><br><br>
                 <iframe width="100%" height="500" src="https://gcc.godbolt.org/e?hideEditorToolbars=true#g:!((g:!((g:!((h:codeEditor,i:(fontScale:14,j:1,lang:c%2B%2B,source:'//+Type+your+code+here,+or+load+an+example.%0A%23include%3Ciostream%3E%0Ausing+namespace+std%3B%0A%0Aint+main()%0A%7B++%0A++++cout%3C%3C%22Hello+World%22%3B%0A++++return+0%3B%0A%7D'),l:'5',n:'0',o:'C%2B%2B+source+%231',t:'0')),k:100,l:'4',m:49.77511244377811,n:'0',o:'',s:0,t:'0'),(g:!((h:executor,i:(argsPanelShown:'1',compilationPanelShown:'0',compiler:g102,compilerOutShown:'0',execArgs:'',execStdin:'',fontScale:14,j:1,lang:c%2B%2B,libs:!(),options:'',source:1,stdinPanelShown:'1'),l:'5',n:'0',o:'x86-64+gcc+10.2+Executor+(Editor+%231)+C%2B%2B',t:'0')),header:(),l:'4',m:50.22488755622189,n:'0',o:'',s:0,t:'0')),l:'3',n:'0',o:'',t:'0')),version:4"></iframe>
                 <div class="text-center">
-                  <h2>Weekly Quiz as per Tutorials</h2><br>
-                  <p class="article-content disabled">Coming Soon...Stay Tuned</p><br>
                   <h2>Common Quiz Topic Wise</h2>
                   <ul class="list-group list-group-flush">
                       <li class="list-group-item article-content"><div class='goconqr-popup-embed' data-id='26966222' data-type='quizzes'></div><script type='text/javascript' src='https://cdn.goconqr.com/embed.min.js'></script></li>
@@ -87,25 +83,26 @@
                       <li class="list-group-item article-content"><div class='goconqr-popup-embed' data-id='26964013' data-type='quizzes'></div><script type='text/javascript' src='https://cdn.goconqr.com/embed.min.js'></script></li>
                       <li class="list-group-item article-content"><div class='goconqr-popup-embed' data-id='26965795' data-type='quizzes'></div><script type='text/javascript' src='https://cdn.goconqr.com/embed.min.js'></script></li>
                       <li class="list-group-item article-content"><div class='goconqr-popup-embed' data-id='26985986' data-type='quizzes'></div><script type='text/javascript' src='https://cdn.goconqr.com/embed.min.js'></script></li>
-                      <li class="list-group-item article-content">C++ Quiz</li>
-                      <li class="list-group-item article-content">C++ Quiz</li>
-                      <li class="list-group-item article-content">C++ Quiz</li>
-                      <li class="list-group-item article-content">C++ Quiz</li>
+                      <li class="list-group-item article-content"><div class='goconqr-popup-embed' data-id='27160096' data-type='quizzes'></div><script type='text/javascript' src='https://cdn.goconqr.com/embed.min.js'></script></li>
+                      <li class="list-group-item article-content"><div class='goconqr-popup-embed' data-id='27160498' data-type='quizzes'></div><script type='text/javascript' src='https://cdn.goconqr.com/embed.min.js'></script></li>
+                      <li class="list-group-item article-content"><div class='goconqr-popup-embed' data-id='27161792' data-type='quizzes'></div><script type='text/javascript' src='https://cdn.goconqr.com/embed.min.js'></script></li>
+                      <li class="list-group-item article-content"><div class='goconqr-popup-embed' data-id='27162083' data-type='quizzes'></div><script type='text/javascript' src='https://cdn.goconqr.com/embed.min.js'></script></li>
+                      <li class="list-group-item article-content"><div class='goconqr-popup-embed' data-id='27162694' data-type='quizzes'></div><script type='text/javascript' src='https://cdn.goconqr.com/embed.min.js'></script></li>
+                      <li class="list-group-item article-content"><div class='goconqr-popup-embed' data-id='27165134' data-type='quizzes'></div><script type='text/javascript' src='https://cdn.goconqr.com/embed.min.js'></script></li>
+                      <li class="list-group-item article-content"><div class='goconqr-popup-embed' data-id='27165573' data-type='quizzes'></div><script type='text/javascript' src='https://cdn.goconqr.com/embed.min.js'></script></li>
                     </ul>
                   </div>
               </div>  
               <div id="menu3" class="container tab-pane fade"><br>
                 <iframe src="https://trinket.io/embed/html/0ddc0fb049" width="100%" height="500" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
                 <div class="text-center">
-                  <h2>Weekly Quiz as per Tutorials</h2><br>
-                  <p class="article-content disabled">Coming Soon...Stay Tuned</p><br>
                   <h2>Common Quiz Topic Wise</h2>
                   <ul class="list-group list-group-flush">
                       <li class="list-group-item article-content"></li>
-                      <li class="list-group-item article-content">C++ Quiz</li>
-                      <li class="list-group-item article-content">C++ Quiz</li>
-                      <li class="list-group-item article-content">C++ Quiz</li>
-                      <li class="list-group-item article-content">C++ Quiz</li>
+                      <li class="list-group-item article-content"><div class='goconqr-popup-embed' data-id='27128428' data-type='quizzes'></div><script type='text/javascript' src='https://cdn.goconqr.com/embed.min.js'></script></li>
+                      <li class="list-group-item article-content"><div class='goconqr-popup-embed' data-id='27131138' data-type='quizzes'></div><script type='text/javascript' src='https://cdn.goconqr.com/embed.min.js'></script></li>
+                      <li class="list-group-item article-content"><div class='goconqr-popup-embed' data-id='27160812' data-type='quizzes'></div><script type='text/javascript' src='https://cdn.goconqr.com/embed.min.js'></script></li>
+                      <li class="list-group-item article-content"><div class='goconqr-popup-embed' data-id='27158676' data-type='quizzes'></div><script type='text/javascript' src='https://cdn.goconqr.com/embed.min.js'></script></li>
                     </ul>
                   </div>
               </div>
@@ -114,8 +111,6 @@
               </div>
               <div id="menu5" class="container tab-pane fade"><br>
                 <div class="text-center">
-                  <h2>Weekly Quiz as per Tutorials</h2><br>
-                  <p class="article-content disabled">Coming Soon...Stay Tuned</p><br>
                   <h2>Common Quiz Topic Wise</h2>
                   <ul class="list-group list-group-flush">
                       <li class="list-group-item article-content"><div class='goconqr-popup-embed' data-id='26962694' data-type='quizzes'></div><script type='text/javascript' src='https://cdn.goconqr.com/embed.min.js'></script></li>
