--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -9,9 +9,9 @@
       <div class="carousel-item active">
         <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1602362422/Resources/Carousel1_a3d6ar.png" class="d-block w-100" alt="...">
       </div>
-      <div class="carousel-item">
+      <!--<div class="carousel-item">
         <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1602360626/Resources/Carousel2_rqtvzy.png" class="d-block w-100" alt="...">
-      </div>
+      </div>-->
       <div class="carousel-item">
         <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1602589904/Resources/C_xzmbvs.png" class="d-block w-100" alt="...">
       </div>
