About us update

--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -42,11 +42,11 @@
     <div class="row mb-5">
         <div class="col-lg-6 col-md-6 mb-lg-0 mb-5">
             <div class="avatar mx-auto">
-              <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1603906218/Team%20Photo/IMG_20200327_234247_153_aglb9z.jpg" class="rounded-circle z-depth-1 team"
+              <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1601988702/Team%20Photo/Bhabatosh_bpkwds.jpg" class="rounded-circle z-depth-1 team"
                 alt="Sample avatar" style="height: 65%; width: 65%; box-shadow: 5px 5px 20px rgb(66 77 84)">
             </div>
             <h5 class="font-weight-bold mt-4 mb-3" style="color: #00378a;">Bhabatosh Mahanta</h5>
-            <p class="text-uppercase blue-text mb-0"><strong>Founder & CEO</strong></p>
+            <p class="text-uppercase blue-text mb-0"><strong>CEO & Founder</strong></p>
             <p class="article-content" style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">IIIT Bhubaneswar</p>
             <ul class="list-unstyled mb-0">
                 <a class="p-2 fa-lg fb-ic" href="https://www.facebook.com/bhabatosh.mahanta.3" style="color: black; text-decoration: none;">
@@ -71,7 +71,7 @@
                 alt="Sample avatar" style="height: 65%; width: 65%; box-shadow: 5px 5px 20px rgb(66 77 84)">
             </div>
             <h5 class="font-weight-bold mt-4 mb-3" style="color: #00378a;">Rashmi Ranjan Das</h5>
-            <p class="text-uppercase blue-text mb-0"><strong>Co-Founder & Web Developer</strong></p>
+            <p class="text-uppercase blue-text mb-0"><strong>COO and Co-Founder</strong></p>
             <p class="article-content" style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">IIIT Bhubaneswar</p>
             <ul class="list-unstyled mb-0">
               <a class="p-2 fa-lg fb-ic" href="https://www.facebook.com/rashmiranjan.das.75286" style="color: black; text-decoration: none;">
@@ -102,7 +102,7 @@
             alt="Sample avatar" style="height: 65%; width: 65%; box-shadow: 5px 5px 20px rgb(66 77 84)">
         </div>
         <h5 class="font-weight-bold mt-4 mb-3" style="color: #00378a;">Smita Jha</h5>
-        <p class="text-uppercase blue-text mb-0"><strong>Front-End Developer</strong></p>
+        <p class="text-uppercase blue-text mb-0"><strong>Chief Technology Officer</strong></p>
         <p class="article-content" style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">IIIT Bhubaneswar</p>
         <ul class="list-unstyled mb-0">
           <a class="p-2 fa-lg fb-ic" href="https://www.facebook.com/profile.php?id=100005560818601" style="color: black; text-decoration: none;">
@@ -125,7 +125,7 @@
             alt="Sample avatar" style="height: 65%; width: 65%; box-shadow: 5px 5px 20px rgb(66 77 84)">
         </div>
         <h5 class="font-weight-bold mt-4 mb-3" style="color: #00378a;">Shovna Panda</h5>
-        <p class="text-uppercase blue-text mb-0"><strong>Web Designer & Content Writer</strong></p>
+        <p class="text-uppercase blue-text mb-0"><strong>Business Associate</strong></p>
         <p class="article-content" style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">IIIT Bhubaneswar</p>
           <a class="p-2 fa-lg tw-ic" href="https://www.linkedin.com/in/shovna-panda-4277631b8" style="color: black; text-decoration: none;">
             <i class="fab fa-linkedin linkedin blue-text"> </i>
@@ -143,7 +143,7 @@
             alt="Sample avatar" style="height: 60%; width: 65%; box-shadow: 5px 5px 20px rgb(66 77 84)">
         </div>
         <h5 class="font-weight-bold mt-4 mb-3" style="color: #00378a;">Suman Patra</h5>
-        <p class="text-uppercase blue-text mb-0"><strong>Web Designer & Content Writer</strong></p>
+        <p class="text-uppercase blue-text mb-0"><strong>Chief Designer</strong></p>
         <p class="article-content" style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">IIIT Bhubaneswar</p>
         <ul class="list-unstyled mb-0">
             <a class="p-2 fa-lg tw-ic" href="https://www.linkedin.com/in/suman-patra-888a131b6/" style="color: black; text-decoration: none;">
