--- a/main/templates/main/contact.html
+++ b/main/templates/main/contact.html
@@ -46,7 +46,7 @@
         </p>
       </div>
     </div>
-    <form action="mail" method="POST">
+    <!--<form action="mail" method="POST">
         {% csrf_token %}
         <div class="form-row">
           <div class="form-group col-md-6">
@@ -87,7 +87,9 @@
         <div style="text-align: center;">
             <button type="submit" class="btn btn-primary">Submit Feedback</button>
         </div>
-      </form>
+      </form>-->
+      <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+      <div class="elfsight-app-da8a9347-5b0a-4dd7-88b1-debdb781ee5b"></div> 
       <div class="row" style="border: 1px solid black; padding: 2%; margin: 2%">
         <div class="col-xs-12 col-sm-12 col-md-6">
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3743.1465147154636!2d85.78236441491975!3d20.252757486423906!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a19a794e985622d%3A0x1e5468325c487d1b!2sPathaPadha.in!5e0!3m2!1sen!2sin!4v1603257479301!5m2!1sen!2sin" style="height: 24rem; width: 100%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
