Google Reviews Added

--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="The First Ever ODIA E-Learning Platform where you can learn to code for free with full explanation in your native language ODIA. Come and Join Us." />
+    <script data-ad-client="ca-pub-9541351610160498" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     {% block header %}
     <title>Learn Coding In Odia | Home</title>
     {% endblock %}
