--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -314,7 +314,7 @@
                             <i class="fas fa-quote-left"></i>When I entered university life, things were chaotic and studying coding was a daunting task being new to the coding world.  So it was always self motivation, research and hard coding that drove me forth.From all this experience and with a zeal to simply it all for the brand new coders I present this endeavour of mine.
                             Welcome to be a part of our family!<i class="fas fa-quote-right"></i></p>
                         <h4 class="font-weight-bold">Bhabatosh Mahanta</h4>
-                        <h6 class="font-weight-bold my-3">Founder & CEO</h6>
+                        <h6 class="font-weight-bold my-3">CEO & FOUNDER</h6>
                         </div>
                       </div>
                     <div class="carousel-item">
@@ -327,7 +327,7 @@
                             <i class="fas fa-quote-left"></i>Taking a big step to pursue higher studies and stepping into Engineering, I faced many problems while learning to code. At Pathapadha.in, We believe if good tutorials and elaborate resources are provided at a single place, Anyone can learn to code with ease.<b>"ଜୟ ଜଗନ୍ନାଥ"(Jay Jagannath)</b> <i class="fas fa-quote-right"></i>
                         </p>
                         <h4 class="font-weight-bold">Rashmi Ranjan Das</h4>
-                        <h6 class="font-weight-bold my-3">Co-Founder & Developer</h6>
+                        <h6 class="font-weight-bold my-3">COO & CO-FOUNDER</h6>
                         </div>
                     </div>
                     <div class="carousel-item">
@@ -339,7 +339,7 @@
                         <p>
                             <i class="fas fa-quote-left"></i>You will never know where your path will lead you to but you can definitely choose that path. I believe once you start showing dedication and do hardwork you can achieve anything in your life.<i class="fas fa-quote-right"></i></p>
                         <h4 class="font-weight-bold">Smita Jha</h4>
-                        <h6 class="font-weight-bold my-3">Front-end Developer</h6>
+                        <h6 class="font-weight-bold my-3">CHIEF TECHNOLOGY OFFICER</h6>
                         </div>
                     </div>
                     <div class="carousel-item">
@@ -351,7 +351,7 @@
                       <p>
                         <i class="fas fa-quote-left"></i>Never Give Up! Be consistent and keep practicing. Consistency in the right path is the key to success. We are there to help in making you consistent in your career path.<i class="fas fa-quote-right"></i></p>
                       <h4 class="font-weight-bold">Shovna Panda</h4>
-                      <h6 class="font-weight-bold my-3">Front-end Designer</h6>
+                      <h6 class="font-weight-bold my-3">BUSINESS ASSOCIATE</h6>
                       </div>
                    </div>
                   <div class="carousel-item">
@@ -364,7 +364,7 @@
                       <i class="fas fa-quote-left"></i>Education is power. In this fast moving world, Language should no longer be a barrier. All you need is passion and willingness to learn. 
                       Your zeal combined with our offerings provide the most powerful and first hand experience to conquer the odds.<i class="fas fa-quote-right"></i></p>
                     <h4 class="font-weight-bold">Suman Patra</h4>
-                    <h6 class="font-weight-bold my-3">Front-End Designer</h6>
+                    <h6 class="font-weight-bold my-3">CHIEF DESIGNER</h6>
                     </div>
                   </div> 
                     </div>
@@ -471,6 +471,12 @@
         </div>
 
         <!----------------------------------------------------->
+
+        <div class="container">
+          <h2 class="text-center">Google Reviews</h2>
+          <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+          <div class="elfsight-app-51935350-0cf2-4c15-b978-f1502cc787c8"></div>
+        </div>
     </div>
 </div>
 {% endblock %}
