Contact Form modified

--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -311,7 +311,7 @@
                             alt="Second sample avatar image" style="height: 23%; width: 23%">
                         </div>
                         <p>
-                            <i class="fas fa-quote-left"></i>When I entered university life, things were chaotic and studying coding was a daunting task being new to the coding world.  So it was always self motivation, research and hard coding that drove me forth.From all this experience and with a zeal to simply it all for the brand new coders I present this endeavour of mine.
+                            <i class="fas fa-quote-left"></i>When I entered university life, things were chaotic and studying coding was a daunting task being new to the coding world.  So it was always self motivation, research and hard coding that drove me forth.From all this experience and with a zeal to simplify it all for the brand new coders I present this endeavour of mine.
                             Welcome to be a part of our family!<i class="fas fa-quote-right"></i></p>
                         <h4 class="font-weight-bold">Bhabatosh Mahanta</h4>
                         <h6 class="font-weight-bold my-3">CEO & FOUNDER</h6>
@@ -370,13 +370,13 @@
                     </div>
                     <a class="carousel-control-prev left carousel-control testimonial-btn" href="#carousel-example-1" role="button"
                     data-slide="prev">
-                    <svg width="3em" height="3em" viewBox="0 0 16 16" class="bi bi-caret-left-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                    <svg width="3em" height="3em" viewBox="0 0 16 16" class="bi bi-caret-left-fill" style="margin-bottom: 7em;" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                         <path d="M3.86 8.753l5.482 4.796c.646.566 1.658.106 1.658-.753V3.204a1 1 0 0 0-1.659-.753l-5.48 4.796a1 1 0 0 0 0 1.506z"/>
                     </svg>
                     </a>
                     <a class="carousel-control-next right carousel-control testimonial-btn" href="#carousel-example-1" role="button"
                     data-slide="next">
-                    <svg width="3em" height="3em" viewBox="0 0 16 16" class="bi bi-caret-right-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                    <svg width="3em" height="3em" viewBox="0 0 16 16" class="bi bi-caret-right-fill" style="margin-bottom: 7em;" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                         <path d="M12.14 8.753l-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z"/>
                     </svg>
                     </a>
@@ -472,11 +472,6 @@
 
         <!----------------------------------------------------->
 
-        <div class="container">
-          <h2 class="text-center">Google Reviews</h2>
-          <script src="https://apps.elfsight.com/p/platform.js" defer></script>
-          <div class="elfsight-app-51935350-0cf2-4c15-b978-f1502cc787c8"></div>
-        </div>
     </div>
 </div>
 {% endblock %}
